# game-bot

./: .gitignore  README.md  config.yaml  main.py  mock-api-server.mjs  package-lock.json  pyproject.toml  start.sh  stop.sh  test_tasks.sh
core/: __init__.py  adb_controller.py  debug_viewer.py  desktop_controller.py  feature_matcher.py  input_simulator.py  minicap_stream.py  pixel_analyzer.py  scene_detector.py  state_machine.py  text_parser.py  touch_replayer.py
core/templates/: index.html
data/: gamebot.db  gamebot.db-shm  gamebot.db-wal
data/migrations/: 001_init.sql  002_recordings.sql
docs/: TODO.md  build-guide.md  database-design.md  getting-started.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  theme.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: database.rs  lib.rs  main.rs  python_bridge.rs  state.rs
frontend/src/components/: LiveRecorder.tsx  NodePropertiesPanel.tsx  ScriptNode.tsx  TemplateCapturer.tsx
frontend/src/pages/: AssetManager.tsx  Dashboard.tsx  ScriptEditor.tsx  Settings.tsx  TaskRunner.tsx
frontend/src/stores/: appStore.ts
python-core/: api_server.py  database.py  engine.py  migrate.py  pick_window.py  script_runner.py  skip_tutorial.py  stream_server.py
python-core/core/: adb_controller.py  anti_detect.py  debug_viewer.py  emulator_bridge.py  input_simulator.py  ocr_reader.py  screen_matcher.py  stats_tracker.py
python-core/tasks/: __init__.py  base_task.py  common_handlers.py  task_scheduler.py
tasks/: dynamic_task.py  task_scheduler.py
(+10 files in other folders)
